--- a/projects/data-viz.qmd
+++ b/projects/data-viz.qmd
@@ -3,13 +3,19 @@ title: "Data Visualization"
 editor: visual
 ---
 
-Data visualization is a predominant way we take in information today. As such, it is seen as a form of communication in many fields. We know that poor visualizations can cause confusion, misunderstanding, and distrust; this implies that the consumer’s experience (and their takeaway) is important to consider. However, when data visualization is defined, the process rarely considers consumption or the consumer experience. My venture into the world of data visualization starts here.
+Data visualization is a predominant way we take in information today. As such, it is seen as a form of communication in many fields. We know that poor visualizations can cause confusion, misunderstanding, and distrust; this implies that the consumer’s experience (and their takeaway) is important to consider. However, when data visualization is defined, the process rarely considers comprehension or the consumer experience. Additionally, because data visualization is such an important medium of communication, much of the current work is siloed and spread across disciplines. My venture into the world of data visualization starts here.
 
-My current plan is to tackle the following three projects:
+I am currently working on:
 
--   Analyze the wide variety of guidelines and recommendations that are currently out there for the creators of data visualization. I'd like to map these guidelines to the cognitive processes involved in the consumption of data visualization.
--   Understand how students in an introductory data visualization course consume and create data visualizations (i.e. What features do they pay attention to and deem important? Will students identify with being a creator or consumer more?).
--   Ultimately, these projects will hopefully lead to a broader framework for the cognitive component processes of data visualization consumption and one adaptable set of recommendations for data visualization creators.
+-   Creating a framework of data visualization comprehension and cognitive component processes, rooted in text and discourse comprehension models as well as research in graph comprehension. This will be the basis of my oral preliminary exam for my PhD.
+-   I collected video and screen recording data from students in EPSY 1261 in Fall '24. Students' troubleshooting work on recreating challenging data visualizations, by way of productive failure, was captured. This data will be the focus of my dissertation work. I am interested to understand how students in an introductory data visualization course consume and create data visualizations (i.e. What features do they pay attention to and deem important?)
+
+There is still a lot of work to do in data visualization education and literacy! Right now, my work is a bit more comprehension-based. I believe that once we have an understanding of how people make meaning from data visualizations, we can better address the ways in which we should be creating data visualizations. Ideas for future work I'd like to be a part of: 
+
+-   Develop curriculum and pedagogy to teach students to be conscious creators of data visualization. This means that assessment of student creations must rely on the comprehensibility of the work, not just the technical or aesthetic features. 
+-   Analyze the wide variety of guidelines and recommendations that are currently out there for the creators of data visualization. I'd like to map these guidelines to the cognitive processes involved in the comprehension of data visualization.
+-   Use what we know about data visualization comprehension to create one adaptable set of recommendations for data visualization creators.
+
 
 ### Presentations
 
