--- a/projects/attitudes.qmd
+++ b/projects/attitudes.qmd
@@ -7,4 +7,4 @@ editor: visual
 
 Baby's first poster:
 
-<object data="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf#toolbar=0" type="application/pdf" width="100%" height="100%"> <iframe src="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf#toolbar=0" width="100%" height="100%" style="border: none;"> This browser does not support PDFs. Please download the PDF to view it: <a href="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf">Download PDF</a> </iframe> </object>
+<object data="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf#toolbar=0" type="application/pdf" width="100%" height="100%" scrolling = "no"> <iframe src="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf#toolbar=0" width="100%" height="100%" style="border: none;" scrolling = "no"> This browser does not support PDFs. Please download the PDF to view it: <a href="/files/attitudes/Lisinker_Attitudes_LSGSC_Poster.pdf">Download PDF</a> </iframe> </object>
