--- a/projects/cv.qmd
+++ b/projects/cv.qmd
@@ -2,9 +2,18 @@
 title: "CV"
 ---
 
-<object data="/files/cv/RLisinker-S25-CV.pdf" type="application/pdf" width="100%" height="100%">
-   <iframe src="/files/cv/RLisinker-S25-CV.pdf" width="100%" height="100%" style="border: none;">
-     This browser does not support PDFs. Please download the PDF to view it: 
-     <a href="/files/cv/RLisinker-S25-CV.pdf">Download PDF</a>
-   </iframe>
-</object>
+<!-- <object data="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="100%" style="border: none;"> -->
+<!--    <iframe src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="100%" style="border: none;"> -->
+<!--    </iframe> -->
+<!-- </object> -->
+
+
+<!-- <iframe src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="800px"></iframe> -->
+
+<div style="position: relative; padding-bottom: 129.41%; height: 0; overflow: hidden;">
+  <iframe 
+    src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
+    allowfullscreen>
+  </iframe>
+</div>
