--- a/projects/cv.qmd
+++ b/projects/cv.qmd
@@ -2,18 +2,12 @@
 title: "CV"
 ---
 
-<!-- <object data="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="100%" style="border: none;"> -->
-<!--    <iframe src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="100%" style="border: none;"> -->
-<!--    </iframe> -->
-<!-- </object> -->
-
-
 <!-- <iframe src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" width="100%" height="800px"></iframe> -->
 
-<div style="position: relative; padding-bottom: 129.41%; height: 0; overflow: hidden;">
+<div style="position: relative; padding-bottom: 129.41%; background-color: #E6EED2;">
   <iframe 
     src="https://docs.google.com/document/d/1MnWdrjw8EUC4G6IcJO_Rtm3Hc0NM-tygEM7NLOe2c2s/preview" 
-    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
+    style="position: absolute; top: 0; left: 0; width: 100%; height: 750px; border: none; background-color: #E6EED2;" 
     allowfullscreen>
   </iframe>
 </div>
