--- a/teach.qmd
+++ b/teach.qmd
@@ -4,13 +4,230 @@ format:
   html:
     anchor-sections: false
 ---
+
+### Student Feedback
+
+Here are a few things students have said about my teaching (from course evaluations and [RateMyProfessors](https://www.ratemyprofessors.com/professor/2742423)):
+
+<div style="
+  border: 1px solid #e0e0e0;
+  border-left: 5px solid #7a8c27;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.05);
+  max-width: 700px;
+  background-color: #fff;
+">
+  <p style="font-size: 1.1em; font-style: italic;">"She is an amazing professor, and I would highly recommend her if you are considering. She is deeply caring, learning everyone's names in class, and determined to make a connection will all students. I have enjoyed my time learning from her!"</p>
+  <p><strong>Course:</strong> EPSY 3264 &bull; <strong>Rating:</strong> ⭐⭐⭐⭐⭐</p>
+  <p style="color: #888;">— Anonymous student on <a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2742423" target="_blank">RateMyProfessors</a></p>
+   <span style="
+  background-color: #14A172;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Inspirational</span>
+   <span style="
+  background-color: #f28b30;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Hilarious</span>
+  <span style="
+  background-color: #E072A4;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Caring</span>
+</div>
+
+
+<div style="
+  border: 1px solid #e0e0e0;
+  border-left: 5px solid #7a8c27;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.05);
+  max-width: 700px;
+  background-color: #fff;
+">
+  <p style="font-size: 1.1em; font-style: italic;">"TAKE THIS CLASS! I always recommend people to take the class, especially with Regina. She made an effort to get to know each student and made office hours readily available. She always gave clear feedback and made explanations of topics comprehendible to an average student. She made statistics so fun! She's so sweet and hilarious too"</p>
+  <p><strong>Course:</strong> EPSY 3264 &bull; <strong>Rating:</strong> ⭐⭐⭐⭐⭐</p>
+  <p style="color: #888;">— Anonymous student on <a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2742423" target="_blank">RateMyProfessors</a></p>
+   <span style="
+  background-color: #f28b30;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Hilarious</span>
+  <span style="
+  background-color: #E072A4;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Caring</span>
+  <span style="
+  background-color: #6883BA;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Accessible Outside Class</span>
+</div>
+
+
+<div style="
+  border: 1px solid #e0e0e0;
+  border-left: 5px solid #7a8c27;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.05);
+  max-width: 700px;
+  background-color: #fff;
+">
+  <p style="font-size: 1.1em; font-style: italic;">"Regina is awesome. I was dreading taking stats, but this has become my favorite class. She does a great job at creating a comfortable atmosphere for students. In class, you work through a workbook with small groups, and she reviews the questions together at the end of class. Each unit ends with a group quiz, and individual exam to do at home."</p>
+  <p><strong>Course:</strong> EPSY 3264 &bull; <strong>Rating:</strong> ⭐⭐⭐⭐⭐</p>
+  <p style="color: #888;">— Anonymous student on <a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2742423" target="_blank">RateMyProfessors</a></p>
+   <span style="
+  background-color: #A5CC6B;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Participation Matters</span>
+  <span style="
+  background-color: #454ADE;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Group Projects</span>
+  <span style="
+  background-color: #E072A4;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Caring</span>
+</div>
+
+
+<div style="
+  border: 1px solid #e0e0e0;
+  border-left: 5px solid #7a8c27;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.05);
+  max-width: 700px;
+  background-color: #fff;
+">
+  <p style="font-size: 1.1em; font-style: italic;">"Regina has been one of my favorite professors! You can tell she truly cares about students and makes sure no one is left behind. She's insanely knowledgeable, while somehow being the most caring and hilarious professor I've ever had. I had no hope for this class but she truly made the experience enjoyable. I'll miss her!!"</p>
+  <p><strong>Course:</strong> EPSY 1261 &bull; <strong>Rating:</strong> ⭐⭐⭐⭐⭐</p>
+  <p style="color: #888;">— Anonymous student on <a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2742423" target="_blank">RateMyProfessors</a></p>
+   <span style="
+  background-color: #36B09E;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Clear Grading Criteria</span>
+  <span style="
+  background-color: #69306D;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Gives Good Feedback</span>
+  <span style="
+  background-color: #6883BA;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Accessible Outside Class</span>
+</div>
+
+
+<div style="
+  border: 1px solid #e0e0e0;
+  border-left: 5px solid #7a8c27;
+  padding: 1em;
+  border-radius: 8px;
+  margin-bottom: 1em;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.05);
+  max-width: 700px;
+  background-color: #fff;
+">
+  <p style="font-size: 1.1em; font-style: italic;">"Whenever I missed a lecture, she was always very understanding and helped me get back on track. She did a great job at making coding seem fun and easy to learn. She responded to emails quickly, and gave informative feedback whenever I did something incorrect. Genuinely enjoyed this class!"</p>
+  <p><strong>Course:</strong> EPSY 1261 &bull; <strong>Rating:</strong> ⭐⭐⭐⭐⭐</p>
+  <p style="color: #888;">— Anonymous student on <a href="https://www.ratemyprofessors.com/ShowRatings.jsp?tid=2742423" target="_blank">RateMyProfessors</a></p>
+   <span style="
+  background-color: #F2C14E;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Amazing Lectures</span>
+  <span style="
+  background-color: #69306D;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Gives Good Feedback</span>
+  <span style="
+  background-color: #E072A4;
+  color: #fff;
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 4px;
+  margin-right: 0.3em;
+">Caring</span>
+</div>
+
+```{r eval = F, echo = F}
+inspirational "#14A172"
+hilarious "#F28B30" 
+caring "#E072A4" 
+accessible "#6883BA"
+participation matters "#A5CC6B" 
+group projects  "#454ADE"
+cleargradingcriteria "#36B09E"
+givesgoodfeedback "#69306D"  
+lectures "#F2C14E" 
+
+
+```
+
+
 ### Awards and Honors
 
 I was honored with the Excellence in Teaching graduate student award from the Psychological Foundations in Education program for the 2024-25 academic year
 
 I have received two Thank a Teacher certificates through the Center for Educational Innovation (Spring '22 and Summer '23)  
-
-Additionally, I am incredibly grateful to my students who submit their thoughts on my teaching on [Rate My Professor](https://www.ratemyprofessors.com/professor/2742423)
 
 ### **University of Minnesota, *Minneapolis, MN* **
 
